--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 			<version>1.2.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.11</version>
+ <!--  <scope>test</scope> -->
+</dependency>
 			<dependency>		
     <groupId>info.cukes</groupId>		
     <artifactId>cucumber-testng</artifactId>		
@@ -32,12 +38,12 @@
        <version>4.2.6</version>		
    </dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
+		 <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
