--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,7 @@
 			<version>1.2.4</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-  <groupId>junit</groupId>
-  <artifactId>junit</artifactId>
-  <version>4.11</version>
- <!--  <scope>test</scope> -->
-</dependency>
+		
 			<dependency>		
     <groupId>info.cukes</groupId>		
     <artifactId>cucumber-testng</artifactId>		
@@ -109,7 +104,15 @@
                   </suiteXmlFiles>
                </configuration>
 			</plugin>
-			
+			<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+</configuration>
+</plugin>
 			<plugin>	
 				<groupId>net.masterthought</groupId>
 				<artifactId> maven-cucumber-reporting</artifactId>
